сделал рефакторинг jsonService